--- a/iOSClient/src/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/iOSClient/src/en.lproj/MainStoryboard_iPhone.storyboard
@@ -9,34 +9,32 @@
             <objects>
                 <viewController id="w3T-Li-VeO" customClass="PlaylistViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="75B-Tx-dIV">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ava-ou-DkE">
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="FFx-Pj-7yU">
-                                    <size key="itemSize" width="288" height="190"/>
+                                    <size key="itemSize" width="302" height="192"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="trackCell" id="7Jc-yR-uSm" customClass="TrackCell">
-                                        <rect key="frame" x="16" y="0.0" width="288" height="190"/>
+                                        <rect key="frame" x="9" y="0.0" width="302" height="192"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="288" height="190"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="302" height="192"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="music-note.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Gal-oP-IJl">
+                                                <imageView userInteractionEnabled="NO" contentMode="redraw" image="music-note.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Gal-oP-IJl">
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="161" id="qGT-kS-Taa"/>
+                                                        <constraint firstAttribute="width" constant="248" type="user" id="mna-Rt-pdI"/>
+                                                        <constraint firstAttribute="height" constant="161" type="user" id="qGT-kS-Taa"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Someone that I used to know" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QQP-fZ-xFJ">
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="35" id="Dvc-Ve-o5K"/>
-                                                    </constraints>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="472" text="Someone that I used to know" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QQP-fZ-xFJ">
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -45,12 +43,15 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="Gal-oP-IJl" firstAttribute="top" secondItem="7Jc-yR-uSm" secondAttribute="top" constant="4" id="CIi-mf-XTr"/>
-                                            <constraint firstAttribute="trailing" secondItem="Gal-oP-IJl" secondAttribute="trailing" constant="20" type="default" id="DNc-5l-cmI"/>
-                                            <constraint firstItem="QQP-fZ-xFJ" firstAttribute="top" secondItem="7Jc-yR-uSm" secondAttribute="top" constant="157" id="OhW-E7-21p"/>
-                                            <constraint firstItem="QQP-fZ-xFJ" firstAttribute="trailing" secondItem="7Jc-yR-uSm" secondAttribute="trailing" type="default" id="PPj-2w-Nay"/>
-                                            <constraint firstItem="Gal-oP-IJl" firstAttribute="leading" secondItem="7Jc-yR-uSm" secondAttribute="leading" constant="20" type="default" id="nIj-kW-XJK"/>
-                                            <constraint firstItem="QQP-fZ-xFJ" firstAttribute="leading" secondItem="7Jc-yR-uSm" secondAttribute="leading" type="default" id="xUD-O8-mEB"/>
+                                            <constraint firstItem="QQP-fZ-xFJ" firstAttribute="leading" secondItem="7Jc-yR-uSm" secondAttribute="leading" type="user" id="4Qq-yH-LyY"/>
+                                            <constraint firstItem="QQP-fZ-xFJ" firstAttribute="bottom" secondItem="7Jc-yR-uSm" secondAttribute="bottom" type="user" id="7o7-pv-LJU"/>
+                                            <constraint firstItem="QQP-fZ-xFJ" firstAttribute="top" secondItem="Gal-oP-IJl" secondAttribute="bottom" constant="-1" type="user" id="9DU-Rs-hu7"/>
+                                            <constraint firstItem="QQP-fZ-xFJ" firstAttribute="trailing" secondItem="7Jc-yR-uSm" secondAttribute="trailing" type="user" id="Bec-9M-nNy"/>
+                                            <constraint firstItem="QQP-fZ-xFJ" firstAttribute="leading" secondItem="7Jc-yR-uSm" secondAttribute="leading" type="user" id="EXf-uN-uKa"/>
+                                            <constraint firstAttribute="centerX" secondItem="QQP-fZ-xFJ" secondAttribute="centerX" type="user" id="Pii-BB-J7Z"/>
+                                            <constraint firstAttribute="centerX" secondItem="Gal-oP-IJl" secondAttribute="centerX" type="user" id="SPT-FJ-bCQ"/>
+                                            <constraint firstItem="Gal-oP-IJl" firstAttribute="top" secondItem="7Jc-yR-uSm" secondAttribute="top" constant="-3" type="user" id="oGQ-EZ-iVv"/>
+                                            <constraint firstItem="QQP-fZ-xFJ" firstAttribute="bottom" secondItem="7Jc-yR-uSm" secondAttribute="bottom" type="user" id="tIf-1r-LIj"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="albumArt" destination="Gal-oP-IJl" id="Znw-Ol-WDY"/>
@@ -129,6 +130,7 @@
                             <constraint firstItem="Ava-ou-DkE" firstAttribute="bottom" secondItem="75B-Tx-dIV" secondAttribute="bottom" type="default" id="uLU-am-sjC"/>
                         </constraints>
                     </view>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
                         <outlet property="collectionView" destination="Ava-ou-DkE" id="xmw-IV-vDz"/>
                         <outlet property="nextButton" destination="SLU-08-rxH" id="Lmy-ai-BUr"/>
@@ -146,7 +148,7 @@
             <objects>
                 <tableViewController id="SUp-ER-Bv5" customClass="PlayersTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="sYp-sS-Cre">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -193,7 +195,7 @@
             <objects>
                 <viewController id="8gu-Xd-IQF" customClass="TrackSearchViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Xgj-ab-KYT">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="txN-pV-pUh">
@@ -301,9 +303,59 @@
     <resources>
         <image name="music-note.jpg" width="550" height="550"/>
     </resources>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="PlayersTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayersTableViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelSelection:"/>
+            </relationships>
+        </class>
+        <class className="PlaylistViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlaylistViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="nextPressed:"/>
+                <relationship kind="action" name="playPausePressed:"/>
+                <relationship kind="action" name="unwindFromPlayerSelection:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="action" name="unwindFromTrackSelection:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="outlet" name="collectionView" candidateClass="UICollectionView"/>
+                <relationship kind="outlet" name="nextButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="playPauseButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="playerButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="TrackCell" superclassName="UICollectionViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrackCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="albumArt" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="trackTitle" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="TrackSearchViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrackSearchViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="results" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="searchBar" candidateClass="UISearchBar"/>
+            </relationships>
+        </class>
+        <class className="UICollectionReusableView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
+        </class>
+        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
+        </class>
+        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
+        </class>
+        <class className="UIStoryboardSegue" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
